pod-read-only-root-filesystem/negative-test-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-readonlyrootfilesystem-disallowed
  labels:
    app: alpine-readonlyrootfilesystem
spec:
  containers:
  - name: alpine
    image: alpine:3.13.7
    command:
      - /bin/sh
      - "-c"
      - "sleep 60m"
    resources:
      limits:
        cpu: "100m"
        memory: "500Mi"
    securityContext:
      readOnlyRootFilesystem: false
